(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(executable
 (name demoHighFunctions)
 (modules demoHighFunctions)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoFactorial)
 (modules demoFactorial)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoIf)
 (modules demoIf)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))